k8s/application/frontend/deploy.route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: pims
      env: dev
      name: pims-app
      role: app
    name: pims-app
    namespace: 5b7aa5-dev
  spec:
    host: pims-app-5b7aa5-dev.apps.silver.devops.gov.bc.ca
    port:
      targetPort: 8080-tcp
    tls:
      caCertificate: ""
      certificate: ""
      insecureEdgeTerminationPolicy: Redirect
      key: ""
      termination: edge
    to:
      kind: Service
      name: pims-app
      weight: 100
kind: List
metadata: {}
